tests/invalid/error_03.robot
// error_03: [SEMÁNTICO] Llamada a rutina no definida con call directo
sensor dist;
rutina main() {
    rutina_fantasma();
}
